# lupin-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  generate_sample_pdf.py  test-pipeline.ps1
.github/scripts/: ai-review.py
.github/workflows/: ai-review.yml  cd.yml  ci.yml  pipeline.yml  pr-checks.yml
app/: .env.example  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
app/backend/: Dockerfile  generate_sample_pdf.py  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 30a1bc978113_initial_tables.py
app/backend/app/: main.py
app/backend/app/agents/: graph.py  llm.py  orchestrator.py  planner.py  reporter.py  state.py
app/backend/app/agents/analysts/: cost_computation.py  process_agent.py  vendor_analysis.py
app/backend/app/api/v1/endpoints/: analysis.py  projects.py
app/backend/app/core/: config.py  database.py  redis.py
app/backend/app/schemas/: analysis.py
app/backend/app/services/: analysis_service.py  azure_openai.py  document_parser.py
app/frontend/: eslint.config.js  nginx.conf
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 30a1bc978113_initial_tables.py
backend/app/: main.py
backend/tests/: test_health.py
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
notebooks/: exploration.ipynb
terraform/: main.tf  outputs.tf  variables.tf
(+33 files in other folders)
